# ink

./: .gitignore  README.md  pyproject.toml
snow.png.gcode/: image.gcode
src/: config.py  main.py  processor.py
src/utils/: hatch.py  logger.py  path_opt.py
