[project]
name = "ink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "pillow>=12.1.1",
    "pydantic-settings>=2.0.0",
    "scipy>=1.12.0",
    "simplification>=0.7.14",
    "svgpathtools>=1.7.2",
]

[project.scripts]
ink-convert = "src.main:main"

